--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -1,4 +1,5 @@
 <div class="stock-container">
     <div class="name"><h3>{{name}}</h3> - <h4>({{code }})</h4></div>
     <div class="price" [class]="positiveChange ? 'positive' : 'negative'">${{price}}</div>
+    <button (click)="toggleFavorite()" [disabled]="favorite">Add to Favorite</button>
 </div>
