--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
   <h1>Welcome to {{title}}</h1>
-  <app-stock-item></app-stock-item>
+  <app-stock-item [stock]="stockObj" (toggleFavorite)="toggleFavoritePadre($event)"></app-stock-item>
 </div>
